longhorn/longhorn-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-web-ui
  namespace: longhorn-system
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`longhorn.k8s.local`) || Host(`longhorn.k8s.bavaria-group.ru`)
      kind: Rule
      services:
      - name: longhorn-frontend
        port: 80
  tls:
    secretName: longhorn-web-ui-tls
